--- a/app/src/main/res/layout/widget_collection_layout.xml
+++ b/app/src/main/res/layout/widget_collection_layout.xml
@@ -1,34 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp">
+    android:orientation="vertical"
+    android:padding="@dimen/widget_margin">
 
     <FrameLayout
         android:id="@+id/stock_widget"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="?android:attr/listPreferredItemHeightSmall"
-        android:background="@color/material_blue_500">
+        android:background="@color/material_blue_500"
+        android:minHeight="?android:attr/listPreferredItemHeightSmall">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="@string/title_widget"
-            android:textSize="@dimen/md_title_textsize"
-            android:layout_gravity="center"/>
+            android:textSize="@dimen/md_title_textsize" />
     </FrameLayout>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
+
         <ListView
             android:id="@+id/list_stock_widget"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:divider="@null"
-            android:dividerHeight="0dp" />
+            android:dividerHeight="0dp"
+            tools:listitem="@layout/widget_collection_item" />
     </FrameLayout>
 
 </LinearLayout>
