--- a/app/src/main/res/xml/widget_info.xml
+++ b/app/src/main/res/xml/widget_info.xml
@@ -2,5 +2,6 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialLayout="@layout/widget_single"
     android:minHeight="@dimen/widget_default_height"
+    android:resizeMode="horizontal|vertical"
     android:minWidth="@dimen/widget_default_width"
     android:updatePeriodMillis="0"/>
